[gd_scene load_steps=21 format=2]

[ext_resource path="res://Graphic/Actor/plant_pot.png" type="Texture" id=1]
[ext_resource path="res://Script/Actor/Plant.gd" type="Script" id=2]
[ext_resource path="res://Graphic/Actor/plant_head_normal.png" type="Texture" id=3]
[ext_resource path="res://Graphic/Environment/shadow.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 4 )

[sub_resource type="Animation" id=4]
resource_name = "CloseTransition"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Closed"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Open"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=8]
resource_name = "OpenTransition"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "TV_Eat"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=15]
resource_name = "TV_Open"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=11]
resource_name = "IdleShort"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=17]
resource_name = "SkateIdle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=18]
resource_name = "SkateRun"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="CircleShape2D" id=16]
radius = 64.0

[node name="Plant" type="Area2D"]
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 1 )
z_index = -1
z_as_relative = false
texture = ExtResource( 4 )

[node name="Pot" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
vframes = 6

[node name="Head" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 4
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="HeadPlayer" type="AnimationPlayer" parent="."]
autoplay = "Closed"
anims/CloseTransition = SubResource( 4 )
anims/Closed = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Open = SubResource( 7 )
anims/OpenTransition = SubResource( 8 )
anims/RESET = SubResource( 9 )
anims/TV_Eat = SubResource( 14 )
anims/TV_Open = SubResource( 15 )

[node name="PotPlayer" type="AnimationPlayer" parent="."]
autoplay = "IdleShort"
anims/Idle = SubResource( 10 )
anims/IdleShort = SubResource( 11 )
anims/RESET = SubResource( 12 )
anims/Run = SubResource( 13 )
anims/SkateIdle = SubResource( 17 )
anims/SkateRun = SubResource( 18 )

[node name="VacuumCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 16 )
disabled = true

[connection signal="area_entered" from="." to="." method="_on_Plant_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="HeadPlayer" to="." method="_on_HeadPlayer_animation_finished"]
